fixes misaligned element texts

--- a/admin/themes/default/css/style.css
+++ b/admin/themes/default/css/style.css
@@ -2226,6 +2226,10 @@ ul.details {
 .element .element-text:last-of-type:after {
   height: 0px;
   margin-bottom: 0; }
+  
+@media (max-width: 1440px) {
+  .element .element-text{
+    margin-left: 10px; } }
 
 .element-text p {
   word-wrap: break-word;
